# edTech

./: .env.example  .gitignore  CLAUDE.md  PRODUCTION_ROADMAP.md  QUALITY_SCORING_ENGINE.md  README.md  TRUST_FIXES.md  TRUST_FRAMEWORK_TRACKER.md  WORKSHEET_AUDIT_V3.md  WORKSHEET_AUDIT_V4.md  WORKSHEET_AUDIT_V6.md  WORKSHEET_QUALITY_STRATEGY.md  prd.md  prd_phase2.md
backend/: .dockerignore  .env.example  Dockerfile  TRUST_ROLLOUT.md  TRUST_RULES.md  pyproject.toml  requirements.txt  seed_cbse_syllabus.sql  supabase_schema.sql
backend/app/: main.py
backend/migrations/: 002_performance_audit.sql  003_rag_pgvector.sql  003a_fix_embedding_dims.sql  004_match_curriculum_embeddings.sql  005_question_attempts.sql  006_topic_mastery_diagnostic.sql  007_analytics_views.sql  008_worksheet_feedback.sql  009_app_feedback.sql  010_email_sequence.sql  010_trust_policy_engine.sql  011_trust_dual_run.sql  add_correction_corpus.sql
backend/scripts/: audit_10_worksheets.py  audit_report.json  audit_v3_worksheets.py  audit_worksheet_quality.py  bulk_audit.py  content_audit.py  content_audit_report.json  content_audit_report_1.json  deep_audit.py  e2e_phase2_smoke.py  e2e_trust_fixes_smoke.py  embed_curriculum.py  emergency_fix.py  generate_all_images.py  generate_evs_images.py  out_test_gold_updated.txt  populate_curriculum.py  promote_trust_policies.py  propose_trust_policies.py  retest_health.py  sync_curriculum.py  test_all_topics.py  test_class12_evs.py  test_class1_english.py  test_class1_maths.py  test_class2_maths.py  test_class45_science.py  test_class4_maths.py  test_class5_english.py  test_class5_maths.py  test_computer.py  test_english_topics.py  test_gk.py  test_gold_class.py  test_grade_topic_resolution.py  test_health.py  test_hindi_expansion.py  test_hindi_topics.py  test_moral_science.py  test_phase_wise.py  (+9 more)
backend/tests/: conftest.py  test_answer_authority.py  test_answer_authority_s7.py  test_answer_computer.py  test_answer_normalizer.py  test_api_integration.py  test_curriculum_graph.py  test_diagnostic_context.py  test_difficulty_calibrator.py  test_duplicate_retry.py  test_e2e_pipeline_s8.py  test_embedding.py  test_error_pattern_detector.py  test_fallback_bank.py  (+47 more)
docs/: RULES.md  (+19 more)
(+245 files in other folders)
