[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "openai>=2.16.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "reportlab>=4.4.9",
    "supabase>=2.27.3",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
]

# -- Ruff: linter + formatter (replaces flake8, isort, black, bandit) ----------

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
# E=pycodestyle, F=pyflakes, W=warnings, S=bandit security, I=isort
select = ["E", "F", "W", "S", "I"]
ignore = [
    "E501",   # line too long — handled by formatter
    "S101",   # assert usage — fine in app code and tests
    "S311",   # pseudo-random — only used for worksheet variety, not security
    "S603",   # subprocess call — not applicable
    "S607",   # partial executable path — not applicable
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]          # security rules not relevant in tests
"scripts/*" = ["S"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -- Mypy: gradual type checking -----------------------------------------------

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
